--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 script:
   - mvn test jacoco:report
 after_success:
-  - mvn coveralls:report
+  - mvn coveralls:report -DrepoToken=$COVERALLS_REPO_TOKEN
