Add source encoding

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>de.andreassiegel</groupId>
     <artifactId>validation-constraint-exclusive-field</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
